(chores) camel-azure-storage-queue: use unmodifiable list when possible